--- a/config-client-app-prod.properties
+++ b/config-client-app-prod.properties
@@ -1,3 +1,3 @@
 # Put application+profile-specific config here (app name: client-config-app) (profile name: prod)
 some.property=coffee
-some.other.property=is too good
+some.other.property=is very very very good
